fixing postgres typo

--- a/assets/pages/breathe-easy.html
+++ b/assets/pages/breathe-easy.html
@@ -104,7 +104,7 @@
               </p>
               <h3>Backend API</h3>
               <p>
-                The backend is hosted on AWS using EC2 instances and a PostgresSQL database. Python/Flask is the language
+                The backend is hosted on AWS using EC2 instances and a PostgreSQL database. Python/Flask is the language
                 used with Orator as the ORM. Security is handled at a request level using Google OAuth and JWT's as well as
                 at a model level using relationship constraints.
               </p>
