--- a/assets/pages/deployment-bot.html
+++ b/assets/pages/deployment-bot.html
@@ -101,7 +101,7 @@
               <h3>Technical Architecture</h3>
               <p>
                 The Bot exposes an API from an EC2 instance, and we use Slack commands to interact with it. The Bot is written using
-                Flask and Python on a PostgresSQL database. The Bot uses tools provided by Expo to assist in the building and deploying
+                Flask and Python on a PostgreSQL database. The Bot uses tools provided by Expo to assist in the building and deploying
                 of frontend packages.
               </p>
 						</div>
