changing to a new email

--- a/assets/pages/project-experience.html
+++ b/assets/pages/project-experience.html
@@ -275,7 +275,7 @@
 					<ul class="social-links">
 						<li><a target="_blank" href="https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
 						<li><a target="_blank" href="https://www.linkedin.com/pub/jonathan-northcott/a8/40a/85b" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="mailto:northcott.j@husky.neu.edu" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="mailto:jnorth@informa.dev" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
                     <p class="copyright">
                         © 2019 Jonathan Northcott
