--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 						</div>
 						<div class="ajax-response"></div>
 					</form>
-                    <form id="fspeeForm" style="display: none;" target="_blank" action="https://formspree.io/northcott.j@husky.neu.edu"
+                    <form id="fspeeForm" style="display: none;" target="_blank" action="https://formspree.io/jnorth@informa.dev"
       method="POST">
 
     <input id="fspeeName" type="text" name="name">
@@ -355,7 +355,7 @@
 					<ul class="social-links">
 						<li><a target="_blank" href="https://github.com/northcott-j" class="wow fadeInUp"><i class="fa fa-github"></i></a></li>
 						<li><a target="_blank" href="https://www.linkedin.com/pub/jonathan-northcott/a8/40a/85b" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="mailto:northcott.j@husky.neu.edu" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="mailto:jnorth@informa.dev" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
                     <p class="copyright">
                         © 2019 Jonathan Northcott
