add formspree alias

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 						</div>
 						<div class="ajax-response"></div>
 					</form>
-                    <form id="fspeeForm" style="display: none;" target="_blank" action="https://formspree.io/jnorth@informa.dev"
+                    <form id="fspeeForm" style="display: none;" target="_blank" action="https://formspree.io/jnorth+formspree@informa.dev"
       method="POST">
 
     <input id="fspeeName" type="text" name="name">
